syntax = "proto3";

package broadcast;

option go_package = "./gen/broadcast";

service Broadcaster {
    rpc Broadcast(stream RegisterRequest) returns (stream Update) {}
    rpc PlaySong(PlayRequest) returns (PlayResponse) {}
    rpc SongVolume(VolumeChangeRequest) returns (VolumeChangeResponse) {}
}

message RegisterRequest {}

message Update {
    string currentlyPlaying = 1;
    string duration = 2;
}

message PlayRequest {
    string filename = 1;
}

message PlayResponse {}

message VolumeChangeRequest {
    float volume = 1;
}

message VolumeChangeResponse {}
